--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         }
     ],
     "require": {
-        "php": "7.2.*",
+        "php": "^7.2",
         "symfony/framework-bundle": "^4.2",
         "phpunit/phpunit": "^7.5",
         "doctrine/dbal": "^2.9",
