--- a/composer.json
+++ b/composer.json
@@ -16,9 +16,9 @@
         "php": "^7.2",
         "symfony/framework-bundle": "^4.2",
         "phpunit/phpunit": "^7.5",
-        "doctrine/dbal": "^2.9",
-        "doctrine/doctrine-bundle": "^1.10",
-        "doctrine/orm": "^2.6",
+        "doctrine/dbal": "*",
+        "doctrine/doctrine-bundle": "*",
+        "doctrine/orm": "*",
         "doctrine/data-fixtures": "^1.3"
     },
     "autoload": {
