--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,10 @@
         "doctrine/doctrine-bundle": "*",
         "doctrine/orm": "*",
         "doctrine/data-fixtures": "^1.3"
+    }
+    ,
+    "require-dev": {
+        "roave/security-advisories": "dev-master"
     },
     "autoload": {
         "psr-4": { "Effiana\\MigrationBundle\\": "src/" }
