--- a/composer.json
+++ b/composer.json
@@ -14,12 +14,19 @@
     ],
     "require": {
         "php": "^7.2",
-        "symfony/framework-bundle": "^4.2",
-        "phpunit/phpunit": "^7.5",
+        "doctrine/data-fixtures": "^1.3",
         "doctrine/dbal": "*",
         "doctrine/doctrine-bundle": "*",
         "doctrine/orm": "*",
-        "doctrine/data-fixtures": "^1.3"
+        "phpunit/phpunit": "^7.5",
+        "psr/container": "^1.0",
+        "symfony/config": "^4.3",
+        "symfony/console": "^4.3",
+        "symfony/dependency-injection": "^4.3",
+        "symfony/event-dispatcher": "^4.3",
+        "symfony/finder": "^4.3",
+        "symfony/framework-bundle": "^4.2",
+        "symfony/http-kernel": "^4.3"
     }
     ,
     "require-dev": {
