--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
     ],
     "require": {
         "php": "^7.2",
+        "doctrine/common": "^2.10",
         "doctrine/data-fixtures": "^1.3",
         "doctrine/dbal": "*",
         "doctrine/doctrine-bundle": "*",
@@ -26,7 +27,8 @@
         "symfony/event-dispatcher": "^4.3",
         "symfony/finder": "^4.3",
         "symfony/framework-bundle": "^4.2",
-        "symfony/http-kernel": "^4.3"
+        "symfony/http-kernel": "^4.3",
+        "twig/twig": "^2.11"
     }
     ,
     "require-dev": {
