--- a/src/Resources/config/commands.yml
+++ b/src/Resources/config/commands.yml
@@ -1,23 +1,18 @@
 services:
     Effiana\MigrationBundle\Command\DumpMigrationsCommand:
-        public: false
-        class: Effiana\MigrationBundle\Command\DumpMigrationsCommand
+        autowire: true
+        autoconfigure: true
         tags:
             - { name: console.command }
 
     Effiana\MigrationBundle\Command\LoadDataFixturesCommand:
-        public: false
-        arguments:
-            - '@kernel'
-            - '@effiana_migration.data_fixtures.loader'
-            - '@effiana_migration.data_fixtures.executor'
-            - '@effiana_migration.locator.fixture_path_locator'
-        class: Effiana\MigrationBundle\Command\LoadDataFixturesCommand
+        autowire: true
+        autoconfigure: true
         tags:
             - { name: console.command }
 
     Effiana\MigrationBundle\Command\LoadMigrationsCommand:
-        public: false
-        class: Effiana\MigrationBundle\Command\LoadMigrationsCommand
+        autowire: true
+        autoconfigure: true
         tags:
             - { name: console.command }
