--- a/composer.json
+++ b/composer.json
@@ -21,13 +21,13 @@
         "doctrine/orm": "*",
         "phpunit/phpunit": "^7.5",
         "psr/container": "^1.0",
-        "symfony/config": "^4.3",
-        "symfony/console": "^4.3",
-        "symfony/dependency-injection": "^4.3",
-        "symfony/event-dispatcher": "^4.3",
-        "symfony/finder": "^4.3",
-        "symfony/framework-bundle": "^4.2",
-        "symfony/http-kernel": "^4.3",
+        "symfony/config": "^4.3 | ^5.0",
+        "symfony/console": "^4.3 | ^5.0",
+        "symfony/dependency-injection": "^4.3 | ^5.0",
+        "symfony/event-dispatcher": "^4.3 | ^5.0",
+        "symfony/finder": "^4.3 | ^5.0",
+        "symfony/framework-bundle": "^4.2 | ^5.0",
+        "symfony/http-kernel": "^4.3 | ^5.0",
         "twig/twig": "^2.11"
     }
     ,
