--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,7 @@
         "doctrine/data-fixtures": "^1.3",
         "doctrine/dbal": "*",
         "doctrine/doctrine-bundle": "*",
-        "doctrine/orm": "*",
-        "phpunit/phpunit": "^7.5",
+        "doctrine/orm": "*"
         "psr/container": "^1.0",
         "symfony/config": "^4.3 | ^5.0",
         "symfony/console": "^4.3 | ^5.0",
@@ -32,7 +31,8 @@
     }
     ,
     "require-dev": {
-        "roave/security-advisories": "dev-master"
+        "roave/security-advisories": "dev-master",
+        "phpunit/phpunit": "^8.5"
     },
     "autoload": {
         "psr-4": { "Effiana\\MigrationBundle\\": "src/" }
