--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         "doctrine/data-fixtures": "^1.3",
         "doctrine/dbal": "*",
         "doctrine/doctrine-bundle": "*",
-        "doctrine/orm": "*"
+        "doctrine/orm": "*",
         "psr/container": "^1.0",
         "symfony/config": "^4.3 | ^5.0",
         "symfony/console": "^4.3 | ^5.0",
