--- a/composer.json
+++ b/composer.json
@@ -13,20 +13,20 @@
         }
     ],
     "require": {
-        "php": "^7.2",
+        "php": "^7.2 | ^7.4 | ^8.0",
         "doctrine/common": "^2.10",
         "doctrine/data-fixtures": "^1.3",
         "doctrine/dbal": "*",
         "doctrine/doctrine-bundle": "*",
         "doctrine/orm": "*",
         "psr/container": "^1.0",
-        "symfony/config": "^4.3 | ^5.0",
-        "symfony/console": "^4.3 | ^5.0",
-        "symfony/dependency-injection": "^4.3 | ^5.0",
-        "symfony/event-dispatcher": "^4.3 | ^5.0",
-        "symfony/finder": "^4.3 | ^5.0",
-        "symfony/framework-bundle": "^4.2 | ^5.0",
-        "symfony/http-kernel": "^4.3 | ^5.0",
+        "symfony/config": "^4.3 | ^5",
+        "symfony/console": "^4.3 | ^5",
+        "symfony/dependency-injection": "^4.3 | ^5",
+        "symfony/event-dispatcher": "^4.3 | ^5",
+        "symfony/finder": "^4.3 | ^5",
+        "symfony/framework-bundle": "^4.2 | ^5",
+        "symfony/http-kernel": "^4.3 | ^5",
         "twig/twig": "^3.0"
     }
     ,
