--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,8 @@
     ],
     "require": {
         "php": "^7.2 | ^7.4 | ^8.0",
-        "doctrine/common": "^2.10",
-        "doctrine/data-fixtures": "^1.3",
+        "doctrine/common": "^2.10 | ^3",
+        "doctrine/data-fixtures": "^1.4",
         "doctrine/dbal": "*",
         "doctrine/doctrine-bundle": "*",
         "doctrine/orm": "*",
