--- a/composer.json
+++ b/composer.json
@@ -16,9 +16,9 @@
         "php": "^7.2 | ^7.4 | ^8.0",
         "doctrine/common": "^2.10 | ^3",
         "doctrine/data-fixtures": "^1.4",
-        "doctrine/dbal": "*",
-        "doctrine/doctrine-bundle": "*",
-        "doctrine/orm": "*",
+        "doctrine/dbal": "^2 | ^3",
+        "doctrine/doctrine-bundle": "^2 | ^3",
+        "doctrine/orm": "^2 | dev-2.8.x-dev",
         "psr/container": "^1.0",
         "symfony/config": "^4.3 | ^5",
         "symfony/console": "^4.3 | ^5",
